Fixes #2. Removed redundant comments. Disabled menu header click on same page. Moved collapse button to right and resize image on small.

--- a/src/render/css/local.css.styl
+++ b/src/render/css/local.css.styl
@@ -71,6 +71,17 @@ div.qcif.image
         text-align: left
         font-weight: bold
 
+#nav
+  width 100%
+
+.navbar-header.logo
+  position absolute !important
+  transform translate(0, 10%)
+  @media screen and (max-width: 450px)
+    img
+      height 80px
+      width 80px
+
 #collapseDocumentation
   .panel-body
     width: 10em !important
